# spatialos-codegen

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yaml  coverage.yaml
examples/: main.rs
examples/schema/standard_library/: target.spatialos_worker_packages.json.md5
examples/schema/standard_library/improbable/: standard_library.schema
examples/schema/standard_library/improbable/restricted/: system_components.schema
examples/schema_old/: base.schema  physics.schema
examples/schema_old/player/: animation.schema  health.schema
src/: codegen.rs  lib.rs  resolver.rs
src/ast/: ast_node.rs  command.rs  component.rs  data_type.rs  enum.rs  event.rs  header.rs  member.rs  mod.rs  package_node.rs  root.rs  schema_file.rs  type.rs  value.rs
src/ast/std/: mod.rs
src/parser/: command.rs  component.rs  data_type.rs  enum.rs  event.rs  member.rs  mod.rs  package_name.rs  schema_file.rs  type.rs  utils.rs  value.rs  variant.rs
