[package]
name = "spatialos-codegen"
version = "1.0.0"
authors = ["Thomas Nicollet <thomas.nicollet@epitech.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.2"
walkdir = "2.3.1"

[[example]]
name = "main"