[package]
name = "spatialos-codegen"
version = "0.2.3"
authors = ["Thomas Nicollet <thomas.nicollet@nebulis.io>"]
edition = "2018"
description = "Codegen tool used with spatialos-macro and spatialos-sdk"
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/Project-StarDust/spatialos-codegen"
repository = "https://github.com/Project-StarDust/spatialos-codegen"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version = "1.0", features = ["full"] }
nom = "6"
walkdir = "2.3.1"
quote = "1.0"

[[example]]
name = "main"
